fix caret flicker

--- a/packages/plugin-table/web/statics/styles/cell.scss
+++ b/packages/plugin-table/web/statics/styles/cell.scss
@@ -22,8 +22,9 @@
 .editor {
     height: 100%;
     padding: 10px;
-    &.selected {
-        caret-color: transparent;
+    caret-color: transparent;
+    &.editing {
+        caret-color: unset;
     }
 }
 
